--- a/src/App.css
+++ b/src/App.css
@@ -12,6 +12,11 @@
   border-radius: 1rem;
 }
 
+.card:hover {
+  cursor: pointer;
+  box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.2);
+}
+
 .title {
   font: var(--text-preset-1);
   font-size: 4.6rem;
@@ -279,11 +284,6 @@
     grid-area: grid5;
   }
 
-  .card5 .card__title,
-  .card5 .card__img {
-    width: 50%;
-    height: 100%;
-  }
   .card6 {
     flex-direction: column;
     grid-area: grid6;
